[gd_scene load_steps=17 format=3 uid="uid://cvg0cmgxvdkk0"]

[ext_resource type="Texture2D" uid="uid://doqriorw2lonx" path="res://scenes/ball/visuals/ball.png" id="1"]
[ext_resource type="Script" path="res://scenes/ball/scripts/ball.gd" id="2"]
[ext_resource type="Script" path="res://addons/trail_2d/trail_2d.gd" id="3_af6wq"]

[sub_resource type="Curve" id="Curve_ed05l"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_vv12o"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="1"]
radius = 20.0

[sub_resource type="Curve" id="2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.992605, 0.358483), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_b4lux"]
offsets = PackedFloat32Array(0, 0.203774, 0.724528, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_7n76o"]
gradient = SubResource("Gradient_b4lux")

[sub_resource type="Curve" id="Curve_10gnu"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.25256, 1), 0.0, 0.0, 0, 0, Vector2(0.740614, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_lrslh"]
curve = SubResource("Curve_10gnu")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_oku5c"]
lifetime_randomness = 0.12
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 80.0
emission_ring_inner_radius = 70.0
orbit_velocity_max = 0.1
gravity = Vector3(0, 0, 0)
radial_accel_min = -100.0
radial_accel_max = -80.0
scale_min = 0.06
scale_max = 0.19
scale_curve = SubResource("CurveTexture_lrslh")
color_ramp = SubResource("GradientTexture1D_7n76o")

[sub_resource type="Animation" id="Animation_jwv30"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.375, 0.375)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AppearParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_c1fe5"]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AppearParticles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_b807f"]
resource_name = "bounce"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.18, 0.3),
"transitions": PackedFloat32Array(-2, -2, -2, -2),
"update": 0,
"values": [Vector2(0.375, 0.375), Vector2(0.22, 0.67), Vector2(0.5, 0.181), Vector2(0.375, 0.375)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rhgg1"]
_data = {
"RESET": SubResource("Animation_jwv30"),
"appear": SubResource("Animation_c1fe5"),
"bounce": SubResource("Animation_b807f")
}

[node name="Ball" type="CharacterBody2D" groups=["Ball"]]
script = ExtResource("2")
speed = 700.0

[node name="Trail2D" type="Line2D" parent="."]
width = 25.0
width_curve = SubResource("Curve_ed05l")
gradient = SubResource("Gradient_vv12o")
script = ExtResource("3_af6wq")
length = 25

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.375, 0.375)
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("1")

[node name="VelocityLine" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 88, 0)
width = 25.0
width_curve = SubResource("2")
default_color = Color(0.996078, 0.0705882, 0.0705882, 1)

[node name="AppearParticles" type="GPUParticles2D" parent="."]
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_oku5c")
texture = ExtResource("1")
lifetime = 1.5
one_shot = true
speed_scale = 1.6
explosiveness = 0.7

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rhgg1")
}
